[gd_scene load_steps=5 format=3 uid="uid://dkjbrqmfigtld"]

[ext_resource type="PackedScene" uid="uid://bicgggsr4mmls" path="res://ui/modal.tscn" id="1_k6bx1"]
[ext_resource type="Script" path="res://ui/game_over_modal.gd" id="2_ooc8r"]
[ext_resource type="StyleBox" uid="uid://8olsnk4rahs6" path="res://ui/modal_button_normal.tres" id="3_aipmy"]
[ext_resource type="StyleBox" uid="uid://cha4t4ybrm63n" path="res://ui/modal_button_hover.tres" id="4_fl1f4"]

[node name="GameOverModal" instance=ExtResource("1_k6bx1")]
script = ExtResource("2_ooc8r")

[node name="GameOverLabel" type="Label" parent="Panel" index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.5
offset_right = 121.5
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Game Over"
horizontal_alignment = 1

[node name="HighScoreVBoxContainer" type="VBoxContainer" parent="Panel" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -84.0
offset_right = 65.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighScoreLabel" type="Label" parent="Panel/HighScoreVBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "High Score"
horizontal_alignment = 1

[node name="HighScoreNum" type="Label" parent="Panel/HighScoreVBoxContainer" index="1"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="ScoreVBoxContainer" type="VBoxContainer" parent="Panel" index="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_right = 33.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Panel/ScoreVBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score
"
horizontal_alignment = 1

[node name="ScoreNum" type="Label" parent="Panel/ScoreVBoxContainer" index="1"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="TryAgainButton" type="Button" parent="Panel" index="3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -64.0
offset_right = 81.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.972549, 0.890196, 0.768627, 1)
theme_override_styles/normal = ExtResource("3_aipmy")
theme_override_styles/hover = ExtResource("4_fl1f4")
theme_override_styles/pressed = ExtResource("3_aipmy")
theme_override_styles/focus = ExtResource("3_aipmy")
text = "Try Again"

[connection signal="pressed" from="Panel/TryAgainButton" to="." method="_on_try_again_button_pressed"]
